Fixed Gap btween open category & open channel

--- a/Valour/Client/wwwroot/css/app.css
+++ b/Valour/Client/wwwroot/css/app.css
@@ -240,7 +240,7 @@
     width: 269px;
     background: rgba(255, 255, 255, 0.1);
     margin: 0px;
-    margin-top: -3px;
+    margin-top: -3.9px;
     border-bottom-left-radius: 5px;
     border-bottom-right-radius: 5px;
     overflow: auto;
